# xseed

./: .travis.yml  README.md  pyproject.toml  requirements.txt  ruff.toml  xseed  xseed.py
.github/workflows/: ci.yml
